airflow/logs/dag_id=etl_spark_docker_socket/run_id=manual__2025-11-24T183743.967250+0000/task_id=check_docker_access/attempt=1.log
[2025-11-24T18:37:45.876+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_spark_docker_socket.check_docker_access manual__2025-11-24T18:37:43.967250+00:00 [queued]>
[2025-11-24T18:37:45.884+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_spark_docker_socket.check_docker_access manual__2025-11-24T18:37:43.967250+00:00 [queued]>
[2025-11-24T18:37:45.885+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-11-24T18:37:45.897+0000] {taskinstance.py:2191} INFO - Executing <Task(BashOperator): check_docker_access> on 2025-11-24 18:37:43.967250+00:00
[2025-11-24T18:37:45.901+0000] {standard_task_runner.py:60} INFO - Started process 621 to run task
[2025-11-24T18:37:45.905+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'etl_spark_docker_socket', 'check_docker_access', 'manual__2025-11-24T18:37:43.967250+00:00', '--job-id', '14', '--raw', '--subdir', 'DAGS_FOLDER/etl_spark_docker_real.py', '--cfg-path', '/tmp/tmpjjrxb0pw']
[2025-11-24T18:37:45.907+0000] {standard_task_runner.py:88} INFO - Job 14: Subtask check_docker_access
[2025-11-24T18:37:45.976+0000] {task_command.py:423} INFO - Running <TaskInstance: etl_spark_docker_socket.check_docker_access manual__2025-11-24T18:37:43.967250+00:00 [running]> on host 7934b6c65b02
[2025-11-24T18:37:46.027+0000] {abstractoperator.py:707} ERROR - Exception rendering Jinja template for task 'check_docker_access', field 'bash_command'. Template: '\n    echo "🐳 Verificando acesso ao Docker..."\n    \n    # Verificar se conseguimos ver containers\n    if docker ps > /dev/null 2>&1; then\n        echo "✅ Acesso ao Docker socket funcionando"\n        echo "📋 Containers ativos:"\n        docker ps --format "table {{.Names}}\\t{{.Status}}" | head -10\n    else\n        echo "❌ Sem acesso ao Docker socket"\n        echo "⚠️  Esta DAG requer configuração especial no docker-compose.yaml"\n        echo "💡 Adicionando volumes: - /var/run/docker.sock:/var/run/docker.sock"\n    fi\n    \n    echo "✅ Verificação de Docker concluída"\n    '
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/abstractoperator.py", line 699, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/template/templater.py", line 173, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 1105, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 8, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '.'
[2025-11-24T18:37:46.029+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 2334, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 2465, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 2877, in render_templates
    original_task.render_template_fields(context)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 1241, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/session.py", line 79, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/abstractoperator.py", line 699, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/template/templater.py", line 173, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 1105, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 8, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '.'
[2025-11-24T18:37:46.042+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_spark_docker_socket, task_id=check_docker_access, execution_date=20251124T183743, start_date=20251124T183745, end_date=20251124T183746
[2025-11-24T18:37:46.055+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 14 for task check_docker_access (unexpected '.'; 621)
[2025-11-24T18:37:46.077+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-11-24T18:37:46.102+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
